--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -6,7 +6,7 @@
   top: -146px;
 }
 
-.single-story, .post-type-archive-story {
+// .single-story, .post-type-archive-story {
 
 .single-story,
 .post-type-archive-story {
@@ -247,9 +247,9 @@
       }
       ul {
         padding: 0 7% $base__space-unit;
-        @include desktop {
-          padding: 0 10% $base__space-unit;
-        }
+        // @include desktop {
+        //   padding: 0 10% $base__space-unit;
+        // }
       }
     }
     @include desktop {
@@ -281,18 +281,19 @@
   }
   .vision-image-two {
     display: flex;
-    img {
-      height: 100%;
-    }
+      img {
+        height: 100%;
+      }
   }
   .vision-wrapper-mobile {
+    flex-basis: 50%;
     display: flex;
     flex-flow: column nowrap;
     width: 100%;
     height: auto;
     img {
       min-height: 10%;
-      padding: 0 2.5% $base__space-unit;
+      padding: 0;
     }
   }
 }
@@ -363,4 +364,4 @@
     }
   }
 /* End of Heritage */
-}
+// }
