Style Gallery page.

--- a/themes/csl/sass/style.scss
+++ b/themes/csl/sass/style.scss
@@ -75,3 +75,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "owl-theme-default";
 @import "404";
 @import "single-event";
+@import "gallery";
