--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -720,7 +720,8 @@ object {
     text-align: left;
     padding-left: 12vw;
     padding-right: 12vw;
-    padding-bottom: 28%; }
+    padding-bottom: 28%;
+    margin-bottom: 0; }
 
 .home .entry-content {
   margin-top: 0; }
@@ -2633,3 +2634,258 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
         width: auto;
         height: 160px;
         height: auto; } }
+
+.term-gallery .page-title {
+  width: 100%;
+  text-transform: uppercase;
+  color: #000000;
+  padding-left: 2.5%;
+  margin-top: 2rem; }
+  @media (min-width: 750px) {
+    .term-gallery .page-title {
+      color: #FFFFFF;
+      background: #000000;
+      width: 25%; } }
+
+.term-gallery .site-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  padding: 2.5%; }
+  .term-gallery .site-main .col-1 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    height: auto; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .col-1 {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 36.75%;
+                flex: 0 0 36.75%;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-flow: column nowrap;
+                flex-flow: column nowrap; } }
+  .term-gallery .site-main .col-2 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .col-2 {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-flow: column nowrap;
+                flex-flow: column nowrap;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 60.75%;
+                flex: 0 0 60.75%; } }
+  .term-gallery .site-main [class*="feat-"] {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 2.5vw; }
+    .term-gallery .site-main [class*="feat-"] article {
+      width: 100%;
+      height: 100%; }
+  .term-gallery .site-main .feat-1 {
+    height: 160px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .feat-1 {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 340px;
+                flex: 0 0 340px;
+        height: 340px; }
+        .term-gallery .site-main .feat-1 article {
+          height: 340px;
+          margin-bottom: 0; } }
+  .term-gallery .site-main .feat-2 {
+    height: 220px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 48.75%;
+            flex: 0 0 48.75%;
+    margin-right: auto; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .feat-2 {
+        margin-right: 0;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 480px;
+                flex: 0 0 480px;
+        height: 480px; }
+        .term-gallery .site-main .feat-2 article {
+          height: 480px;
+          margin-bottom: 0; } }
+  .term-gallery .site-main .feat-3 {
+    height: 220px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 48.75%;
+            flex: 0 0 48.75%; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .feat-3 {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 480px;
+                flex: 0 0 480px;
+        height: 480px; }
+        .term-gallery .site-main .feat-3 article {
+          height: 480px;
+          margin-bottom: 0; } }
+  .term-gallery .site-main .feat-4 {
+    height: 160px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .feat-4 {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 480px;
+                flex: 0 0 480px;
+        height: 480px; }
+        .term-gallery .site-main .feat-4 article {
+          height: 480px;
+          margin-bottom: 0; } }
+  .term-gallery .site-main .feat-5 {
+    height: 120px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .feat-5 {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 280px;
+                flex: 0 0 280px;
+        height: 280px;
+        margin-bottom: 3.75vw; }
+        .term-gallery .site-main .feat-5 article {
+          height: 280px;
+          margin-bottom: 0; } }
+  .term-gallery .site-main .feat-6 {
+    height: 150px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 40%;
+            flex: 1 1 40%;
+    margin-right: 2.5vw; }
+    .term-gallery .site-main .feat-6 article {
+      height: 150px;
+      margin-bottom: 0; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .feat-6 {
+        height: 640px;
+        margin-bottom: 3.75vw; }
+        .term-gallery .site-main .feat-6 article {
+          height: 640px; } }
+  .term-gallery .site-main .feat-7 {
+    height: 150px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 40%;
+            flex: 1 1 40%; }
+    .term-gallery .site-main .feat-7 article {
+      height: 150px;
+      margin-bottom: 0; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .feat-7 {
+        height: 640px;
+        margin-bottom: 3.75vw; }
+        .term-gallery .site-main .feat-7 article {
+          height: 640px; } }
+  .term-gallery .site-main .mini-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 48.75%;
+            flex: 0 0 48.75%;
+    margin-right: auto; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .mini-row {
+        margin-right: 0;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-flow: row nowrap;
+                flex-flow: row nowrap;
+        height: 640px;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 640px;
+                flex: 0 0 640px; } }
+  .term-gallery .site-main .feat-8 {
+    height: auto;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 48.75%;
+            flex: 0 0 48.75%; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main .feat-8 {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 860px;
+                flex: 0 0 860px;
+        height: 860px; }
+        .term-gallery .site-main .feat-8 article {
+          height: 860px;
+          margin-bottom: 0; } }
+  .term-gallery .site-main article {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    background-size: cover;
+    background-position: center;
+    background-color: #D91F18;
+    height: 220px;
+    margin-bottom: 2.5vw; }
+    @media (min-width: 750px) {
+      .term-gallery .site-main article {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 48.75%;
+                flex: 0 0 48.75%; } }
+    @media (min-width: 750px) {
+      .term-gallery .site-main article {
+        height: 400px; } }
+    .term-gallery .site-main article a {
+      width: 100%;
+      height: 100%;
+      display: block;
+      color: #ffffff;
+      text-decoration: none; }
+    .term-gallery .site-main article .entry-title {
+      height: 100%;
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end; }
+    .term-gallery .site-main article h2 {
+      min-height: 3rem;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 0.5rem 1rem 0;
+      width: 100%; }
+      @media (min-width: 750px) {
+        .term-gallery .site-main article h2 {
+          min-height: 6rem; } }
