Fix bottom margin on h2 in gallery, remove console log.

--- a/themes/csl/sass/_gallery.scss
+++ b/themes/csl/sass/_gallery.scss
@@ -210,7 +210,8 @@
         background: $trans-black;
         padding: 0.5rem 1rem 0;
         width: 100%;
-
+        margin-bottom: 0;
+        
       }
     }
   }
