style single event

--- a/themes/csl/sass/_gallery.scss
+++ b/themes/csl/sass/_gallery.scss
@@ -1,4 +1,14 @@
 .term-gallery {
+  .alt-title {
+    margin-left: 5px;
+    font-weight: 400;
+    &:before {
+      content: '[ ';
+    }
+    &:after {
+      content: ' ]';
+    }
+  }
   .page-navigation {
     width: 100%;
     position: relative;
