--- a/themes/csl/sass/_single-event.scss
+++ b/themes/csl/sass/_single-event.scss
@@ -9,15 +9,73 @@
     }
     
   }
+  .title {
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+  .alt-title {
+    display: block;
+    font-weight: 400;
+    &:before {
+      content: '[ ';
+    }
+    &:after {
+      content: ' ]';
+    }
+  }
+  .date{
+    @include desktop {
+    font-size: 25px;
+    }
+  }
+  .entry-content{
+    margin-top: 0;
+  }
+  .entry-content {
+    .time,
+    .date,
+    .location
+    {
+    width: 100%;
+    display: block;
+    }
+    .time {
+      font-weight: bold;
+    }
+  }
+  .back-button {
+
+    a {
+      display: none;
+      @include desktop {
+        display: inline-block;
+        text-decoration: none;
+        color: inherit;
+        font-size: 20px;
+        padding-top: 2rem;
+        &:before {
+          font-family: FontAwesome;
+          content: "\f053";
+          margin-right: 0.5rem;
+        }
+      }
+    }
+  }
   article {
     order: 2;
     width: 100%;
+    padding: 0 2%;
+    margin-bottom: 2rem;
     @include desktop {
+      padding: 4rem 2.5% 0;
       flex: 0 0 100%;
-      width: 26%;
+      width: 40%;
       order: 0;
       overflow-y: scroll;
       
+    }
+    @media screen and (min-width: 1200px) {
+      width: 26%;
     }
     
   } 
@@ -33,8 +91,10 @@
         display: none;
       }
       flex: 0 0 740px;
+      width: 60%;
+    }
+    @media screen and (min-width: 1200px) {
       width: 74%;
-   
     }
 
     .owl-stage *:not(img) {
@@ -44,16 +104,22 @@
       }
     }
     .owl-item {
+      &:hover {
+        cursor: grab;
+      }
+      &:active {
+        cursor: grabbing;
+      }
       display: flex;
       justify-content: center;
       align-items: center;
       overflow: hidden;
-
     }
     img {
       height: 350px;
       width: auto;
       max-width: none;
+      position: absolute;
     }
     @include desktop {
       img {
@@ -66,6 +132,20 @@
     
     
   }
+  
+  }
+  .thumbnail-wrapper {
+    order: 3;
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: row wrap;
+    img {
+      flex: 0 0 47%;
+      width: 47%;
+      height: auto;
+      margin-bottom: 2vw;
+    }
+  }
   .owl-event-thumbs {
     width: 100%;
     .owl-nav {
@@ -74,28 +154,61 @@
     .owl-dots {
       display: none;
     }
-    order: 3;
     @include desktop {
       .owl-nav {
         display: initial;
+        .owl-prev {
+          top: 23%;
+        }
+        .owl-next {
+          top: 23%;
+        }
       }
       .owl-dots {
         display: initial;
       }
+      
       order: 0;
-      width: 74%;
+      width: 60%;
       flex: 0 0 210px;
-  
-      img {
-        width: 160px;
-        width: auto;
-        height: 160px;
-        height: auto;
+      height: 210px;
+      .owl-stage {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
       }
+      .owl-item {
+        &:hover {
+          cursor: pointer;
+        }
+        flex: 0 0 9vw;
+        width: 9vw;
+        height: 9vw;
+        margin: 0 0.5vw;
+      }
+      img {
+        width: 9vw;
+        height: 9vw;
+      }
+      @media screen and (min-width: 1200px) {
+        width: 74%;
+        .owl-item {
+          flex: 0 0 11vw;
+          width: 11vw;
+          height: 11vw;
+          margin: 0 .666vw;
+        }
+        img {
+          width: 11vw;
+          height: 11vw;
+          
+        }
+      }
+  
+
     }
     
     
 
-  }
 
 }
