fixed padding on story:vision

--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -221,7 +221,7 @@
   .vision-container {
     .vision-wrapper-desktop {
       @include desktop {
-        padding-top: 2.5%;
+        padding: 2.5% 0 2.5%;
       }
     }
     .entry-header {
