Fix thumbanil sizing mobile

--- a/themes/csl/sass/_single-event.scss
+++ b/themes/csl/sass/_single-event.scss
@@ -142,7 +142,7 @@
     img {
       flex: 0 0 47%;
       width: 47%;
-      height: auto;
+      height: 47vw;
       margin-bottom: 2vw;
     }
   }
