--- a/themes/csl/sass/_weekly-events.scss
+++ b/themes/csl/sass/_weekly-events.scss
@@ -135,6 +135,7 @@
 		@media screen and (min-width:$desktop-width) {
 			.title {
 				margin-top: 0.5rem;
+				height:auto;
 			}
 			.wrapper {
 				padding-top: 3.5rem;
@@ -172,10 +173,8 @@
 		}
 	
 	@media screen and (min-width:1024px) {
-		.term-weekly {
-			.entry-content {
-				top: 25%;
-			}
+		.entry-content {
+			top: 20%;
 		}
 	}
 }
