--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -2168,6 +2168,10 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
   .single-story .vision-container .entry-content ul,
   .post-type-archive-story .vision-container .entry-content ul {
     padding: 0 7% 1.5rem; }
+    @media (min-width: 750px) {
+      .single-story .vision-container .entry-content ul,
+      .post-type-archive-story .vision-container .entry-content ul {
+        padding: 0 10% 1.5rem; } }
   @media (min-width: 750px) {
     .single-story .vision-container,
     .post-type-archive-story .vision-container {
