--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -2,6 +2,7 @@
 	.display{
 		display:block
 	}
+	
 	.header-widget-area{
 		padding-right:1%;
 		.csl-social-media-class{
@@ -40,12 +41,11 @@
 		display:none;
 	}
 	.toggle-open{
+		flex-basis:100%;
 		outline:transparent;
 		border: none;
 		background:none;
-		position:absolute;
 		z-index:9999;
-		top:34%;
 	}
 
 	.mobile-menu{
@@ -82,6 +82,10 @@
 		width:100%;
 		text-decoration:none;
 		color:white;
+	}
+	.mobile-menu-filler{
+		padding:2rem;
+		background-color:$secondary-teal;
 	}
 
 	header{
@@ -131,6 +135,7 @@
 	}
 	.menu-menu-1-container{
 		visibility: hidden;
+		width:0;
 	}
 	.desktop-header-logo{
 		display:none;
