--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -998,12 +998,12 @@ object {
   display: none; }
 
 .toggle-open {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
   outline: transparent;
   border: none;
   background: none;
-  position: absolute;
-  z-index: 9999;
-  top: 34%; }
+  z-index: 9999; }
 
 .mobile-menu {
   display: none;
@@ -1037,6 +1037,10 @@ object {
   width: 100%;
   text-decoration: none;
   color: white; }
+
+.mobile-menu-filler {
+  padding: 2rem;
+  background-color: #18949a; }
 
 header {
   display: inline-block;
@@ -1088,7 +1092,8 @@ header {
   display: none; }
 
 .menu-menu-1-container {
-  visibility: hidden; }
+  visibility: hidden;
+  width: 0; }
 
 .desktop-header-logo {
   display: none; }
