added more padding to header logo increased header height on desktop, changed font weight to lighter on the front page news articles

--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -146,6 +146,7 @@
           height: 300px;
           flex-basis: 30%;
           h3 {
+            font-weight:lighter;
             position: absolute;
             bottom: 0;
             z-index: 1;
