--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -801,6 +801,7 @@ object {
         -ms-flex-preferred-size: 30%;
             flex-basis: 30%; }
         .home .front-page-news .front-page-news-gallery .news-archive-image-wrapper h3 {
+          font-weight: lighter;
           position: absolute;
           bottom: 0;
           z-index: 1;
@@ -1119,12 +1120,6 @@ header {
     display: none; }
   .header-logo {
     display: none; }
-  .desktop-site-header {
-    display: block;
-    width: 100%;
-    background: black;
-    height: 147px;
-    position: relative; }
   .main-navigation {
     height: 5.25rem;
     margin: 3px 0 0; }
@@ -1174,11 +1169,13 @@ header {
     width: auto; } }
 
 @media screen and (min-width: 1024px) {
+  .site-header {
+    height: 110px; }
   .desktop-header-logo {
     display: block;
     position: absolute;
     height: 5rem;
-    margin: 0.75rem 1rem 1rem 1rem;
+    margin: 1rem 1rem 1rem 1rem;
     width: auto; } }
 
 .site-info {
