--- a/themes/csl/sass/_weekly-events.scss
+++ b/themes/csl/sass/_weekly-events.scss
@@ -37,16 +37,17 @@
 		padding-top: 1rem;
 		padding-bottom: 1rem;
 	}
-		.title {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			width: 100%;
-			height: 220px;
-			margin: 1rem 0 1rem 0;
-			background-size: cover;
-			overflow: hidden;
-		}
+	.title {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: 220px;
+		margin: 1rem 0 1rem 0;
+		background-size: cover;
+		overflow: hidden;
+		max-height:110%;
+	}
 		.entry-title-wrapper {
 			position: relative;
 			height: 118px;
@@ -61,12 +62,15 @@
 			color: white;
 			padding-top: 1rem;
 			padding-bottom: 1rem;
+		}
+
 			.title {
 				display: flex;
 				flex-wrap: wrap;
 				justify-content: center;
 				align-items: center;
 				margin-top: 1rem;
+				font-size:1rem;
 			}
 			.alt-title {
 				color: $alt-gray;
@@ -80,7 +84,7 @@
 			.alt-title::after {
 				content: ']';
 			}
-		}
+		
 		.entry-title-wrapper {
 			transition: 1s;
 		}
@@ -136,6 +140,7 @@
 			.title {
 				margin-top: 0.5rem;
 				height:auto;
+				font-size:30px;
 			}
 			.wrapper {
 				padding-top: 3.5rem;
