added css to default single page, removed function that removes posts and comments on the wordpress back end

--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -84,8 +84,8 @@
 		color:white;
 	}
 	.mobile-menu-filler{
-		padding:2rem;
-		background-color:$secondary-teal;
+		height:56px;
+		background-color:transparent;
 	}
 
 	header{
