--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -47,3 +47,24 @@
 .bypostauthor {
 	display: block;
 }
+
+.post-template-default{
+
+	.entry-header{
+		padding-top:7rem;
+	}
+	.entry-content{
+		height:100vh;
+		margin-left:2.5%;
+		margin-right:2.5%;
+	}
+	.entry-title{
+		color: #fff;
+    background: #000;
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+	}
+}
