--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -975,6 +975,10 @@ object {
           align-items: baseline;
   margin-right: 1rem; }
 
+@media screen and (min-width: 1024px) {
+  .sub-nav {
+    padding-top: 1rem; } }
+
 /* MOBILE HEADER	*/
 .display {
   display: block; }
