--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -1,6 +1,6 @@
 //** Hero Image **//
 .hero-container {
-  background: url(../../images/csl-hero.png);
+  background: url(../../images/csl-hero-mobile.jpg);
   background-size: cover;
   background-position: left;
   height: 80vw;
@@ -30,7 +30,7 @@
     top: 15%;
     width: 25%;
   }
-  h2{
+  h2 {
     font-size: 20px;
     font-size: 8vw;
     text-transform: uppercase;
@@ -47,8 +47,6 @@
     background-position: bottom;
     height: 100%;
     position: relative;
-    
-    
     p {
       text-align: left;
       padding-left: 12vw;
@@ -57,13 +55,12 @@
       margin-bottom: 0;
     }
   }
-  .entry-content{
+  .entry-content {
     margin-top: 0;
   }
 }
 
 //** News **//
-
 .home {
   .front-page-news {
     display: none;
@@ -75,26 +72,8 @@
 
 @media screen and (min-width: $desktop-width) {
   .home {
-    h2 {
-      color: white;
-      font-size: 3vw;
-      text-align: left;
-      text-transform: uppercase;
-      border: 1px solid black;
-      background-color: black;
-      padding-right: 1rem;
-      padding-left: 1rem;
-      margin: 4rem 0;
-    }
-    .desktop-bg {
-      background: url(../../images/nature-background.png);
-      background-color: $teal;
-      background-size: 150%;
-      background-repeat: no-repeat;
-      background-position: bottom right;
-     
-    }
     .hero-container {
+      background: url(../../images/csl-hero.png);
       background-position: 80%;
       height: 85vh;
       img {
@@ -103,38 +82,54 @@
         right: 1%;
         left: auto;
       }
+      h2 {
+        color: white;
+        font-size: 3vw;
+        text-align: left;
+        text-transform: uppercase;
+        border: 1px solid black;
+        background-color: black;
+        padding-right: 1rem;
+        padding-left: 1rem;
+        margin: 4rem 0;
+      }
+      .desktop-bg {
+        background: url(../../images/nature-background.png);
+        background-color: $teal;
+        background-size: 150%;
+        background-repeat: no-repeat;
+        background-position: bottom right;
+      }
     }
     .mission-eagles {
-        padding: 0;
-        .eagle-left {
-          left: 60%;
-          top: 20%;
-          width: 20%;
-        }
-        .eagle-right {
-          top: 80%;
-          width: 18%;
-        }
+      padding: 0;
+      .eagle-left {
+        left: 60%;
+        top: 20%;
+        width: 20%;
+      }
+      .eagle-right {
+        top: 80%;
+        width: 18%;
+      }
     }
     article {
       background: none;
       text-align: left;
       color: white;
-
       p {
         text-align: left;
         padding-left: 2rem;
         padding-right: 2rem;
-        margin-top: 0; 
+        margin-top: 0;
         margin-right: 35%;
         font-size: 1.7rem;
-        padding-bottom: 0; 
+        padding-bottom: 0;
       }
     }
     .front-page-news {
       display: flex;
       flex-wrap: wrap;
-
       .front-page-news-gallery {
         display: flex;
         justify-content: space-around;
@@ -146,7 +141,7 @@
           height: 300px;
           flex-basis: 30%;
           h3 {
-            font-weight:lighter;
+            font-weight: lighter;
             position: absolute;
             bottom: 0;
             z-index: 1;
@@ -167,7 +162,7 @@
         }
       }
     }
-    .front-page-see-more{
+    .front-page-see-more {
       text-align: center;
       padding: 1rem 0;
     }
@@ -187,9 +182,7 @@
         text-transform: uppercase;
         max-width: 50%;
       }
-    }
-  // home
+    } // home
   }
-// media queries
+  // media queries
 }
-
