added new mobile hero img

--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -694,7 +694,7 @@ object {
 --------------------------------------------------------------*/
 /* Front page */
 .hero-container {
-  background: url(../../images/csl-hero-mobile.jpg);
+  background: url(../../images/csl-hero-mobile.png);
   background-size: cover;
   background-position: left;
   height: 80vw;
