--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -1,6 +1,6 @@
 //** Hero Image **//
 .hero-container {
-  background: url(../../images/csl-hero-mobile.jpg);
+  background: url(../../images/csl-hero-mobile.png);
   background-size: cover;
   background-position: left;
   height: 80vw;
